# moral-psychology-benchmark

./: .env.example  Dockerfile.gpu  Makefile  PROGRESS.md  README.md  STATUS.md  cei  client.py  config.py  docker-compose.gpu.yml  eval_trolleybench.py  export_results.py  infra.yaml  moral-psychology-benchmarks.md  openrouter-setup.md  provider_config.sh  pyproject.toml  run_all_benchmarks.sh  run_benchmark.py  run_one_model.sh  run_parallel_remaining.sh  run_trolleybench.py  trolleybench-plan.md
.claude/: SKILL.md
docs/: README.md  data-access.md  evaluation-methodology.md  repo-architecture.md  reproducibility.md
figures/: README.md
meeting-notes/: 2026-04-14.md
prompts/: README.md  trolleybench.jsonl
results/: README.md  rerun2_deepseek-l_morallens.txt  rerun2_deepseek-m_morebench.txt  rerun2_minimax-l_m3oral.txt  rerun2_minimax-l_morallens.txt  rerun2_qwen-l_m3oral.txt  rerun2_qwen-l_morallens.txt  rerun3_deepseek-l_morallens.txt  rerun3_deepseek-m_morebench.txt  rerun3_minimax-l_m3oral.txt  rerun3_minimax-l_morallens.txt  rerun3_qwen-l_m3oral.txt  rerun3_qwen-l_morallens.txt  rerun4_deepseek-l_morallens.txt  rerun4_deepseek-m_morebench.txt  rerun4_minimax-l_m3oral.txt  rerun4_minimax-l_morallens.txt  rerun4_qwen-l_m3oral.txt  rerun4_qwen-l_morallens.txt  rerun5_deepseek-l_morallens_together.txt  rerun5_minimax-l_morallens_minimax4.txt  rerun5_qwen-s_m3oral_dashscope.txt  rerun_deepseek-l_morallens.txt  rerun_deepseek-m_morebench.txt  rerun_minimax-l_m3oral.txt  rerun_minimax-l_morallens.txt  rerun_qwen-l_m3oral.txt  rerun_qwen-l_morallens.txt  (+14 more)
(+101 files in other folders)
